--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,4 +1,4 @@
-# Setting base image 
+# Setting base image for the build stage
 FROM node:18.18.2-buster-slim as build
 
 # Setting the work dir for the application
@@ -7,20 +7,25 @@ WORKDIR /app
 # Copying node packages to working directory
 COPY package*.json ./
 
-# Installing the dependencies for the application
-RUN npm install --legacy-peer-deps
+# Install curl for health check 
+RUN apt-get update && apt-get install -y curl
 
-# Copying other application files to work directoty
+# Installing the dependencies for the application
+RUN npm install
+
+# Copying other application files to work directory
 COPY . .
 
 # Building production build
 RUN npm run build
 
-# Setting nginx image for serving frontend application 
+# Setting nginx image for serving frontend application in the final stage
 FROM nginx:alpine
 
-# Copying build folder to /app/dist root directory of the nginx configuration
+# Copy the build folder from the build stage to the nginx configuration
 COPY --from=build /app/dist /app/dist
+
+RUN ls -l /app/dist
 
 # Removing the default nginx configuration file
 RUN rm /etc/nginx/conf.d/default.conf
@@ -28,14 +33,18 @@ RUN rm /etc/nginx/conf.d/default.conf
 # Copying nginx configuration file to nginx configuration directory
 COPY nginx.conf.template /etc/nginx/conf.d/
 
-# Copying nginx start up script to the binary folder
+# Copying nginx start-up script to the binary folder
 COPY nginx.sh /usr/local/bin/
 
-# Setting nginx start up script to be executable
+# Setting nginx start-up script to be executable
 RUN chmod +x /usr/local/bin/nginx.sh
 
-# Exposing application port
+# Expose application port
 EXPOSE 80
 
-# Setting the start up command
+# Setting the start-up command
 CMD [ "nginx.sh" ]
+
+# Define a healthcheck
+HEALTHCHECK --interval=30s --timeout=5s \
+  CMD curl -I http://localhost:80 || exit 1
