Update testing deployment to gc.yml

--- a/.github/workflows/testing deployment to gc.yml
+++ b/.github/workflows/testing deployment to gc.yml
@@ -24,7 +24,7 @@ jobs:
       env: ${{ secrets.GOOGLE_PROJECT }}
       run: |
            gcloud auth configure-docker
-           docker-compose build -t us-east1-docker.pkg.dev/reliable-proton-403504/hostspace/challenge:latest .
+           docker-compose -f docker-compose.yml build -t us-east1-docker.pkg.dev/reliable-proton-403504/hostspace/challenge:latest .
            docker push us-east1-docker.pkg.dev/reliable-proton-403504/hostspace/challenge:latest
 
     
