--- a/.github/workflows/testing deployment to gc.yml
+++ b/.github/workflows/testing deployment to gc.yml
@@ -25,7 +25,7 @@ jobs:
       run: |
            gcloud auth configure-docker
            docker-compose -f docker-compose.yml build -t us-east1-docker.pkg.dev/reliable-proton-403504/hostspace/challenge:latest .
-           docker push us-east1-docker.pkg.dev/reliable-proton-403504/hostspace/challenge:latest
+           docker-compose -f docker-compose.yml push us-east1-docker.pkg.dev/reliable-proton-403504/hostspace/challenge:latest
 
     
 
