updated .env file

--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
     server {
         listen 80;
-        root /usr/share/nginx/html;
+        root app/dist/;
 
         location / {
             try_files $uri $uri/ /index.html;
