--- a/eks_deployments.yaml
+++ b/eks_deployments.yaml
@@ -15,7 +15,7 @@ spec:
       hostNetwork: true
       containers:
       - name: python-project
-        image: public.ecr.aws/l1z2o5a3/python-project
+        image: public.ecr.aws/l1z2o5a3/python-project:latest
         env:
         - name: ZONE_ID
           valueFrom:
@@ -48,55 +48,13 @@ kind: Service
 metadata:
   name: python-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: python
   ports:
     - protocol: TCP
       port: 5000
       targetPort: 5000
-      nodePort: 30001
-
-
----
-
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: nginx-deployment
-spec:
-  replicas: 1
-  selector:
-    matchLabels:
-      app: nginx
-  template:
-    metadata:
-      labels:
-        app: nginx
-    spec:
-      hostNetwork: true
-      containers:
-      - name: nginx-proxy
-        image: public.ecr.aws/l1z2o5a3/nginx-http-proxy
-        ports:
-        - containerPort: 80
-
-
----
-
-apiVersion: v1
-kind: Service
-metadata:
-  name: nginx-service
-spec:
-  type: NodePort
-  selector:
-    app: nginx
-  ports:
-    - protocol: TCP
-      port: 80
-      targetPort: 80
-      nodePort: 30002
 
 
 
@@ -120,7 +78,7 @@ spec:
       hostNetwork: true
       containers:
       - name: vue-project
-        image: public.ecr.aws/l1z2o5a3/vue-project
+        image: public.ecr.aws/l1z2o5a3/vue-project:v4
         env:
         - name: ZONE_ID
           valueFrom:
@@ -128,7 +86,7 @@ spec:
               name: my-config
               key: VUE_APP_PROXY_URL
         ports:
-        - containerPort: 8080
+        - containerPort: 80
 
 
 ---
@@ -139,11 +97,10 @@ kind: Service
 metadata:
   name: vue-service
 spec:
-  type: NodePort
+  type: ClusterIP
   selector:
     app: vue-app
   ports:
     - protocol: TCP
-      port: 8080
-      targetPort: 8080
-      nodePort: 30003
+      port: 80
+      targetPort: 80
