--- a/.github/workflows/testing deployment to gc.yml
+++ b/.github/workflows/testing deployment to gc.yml
@@ -24,8 +24,8 @@ jobs:
       env: ${{ secrets.GOOGLE_PROJECT }}
       run: |
            gcloud auth configure-docker us-east1-docker.pkg.dev
-           docker-compose -f docker-compose.yml build -t us-east1-docker.pkg.dev/reliable-proton-403504/hostspace/challenge:latest .
-           docker-compose -f docker-compose.yml push us-east1-docker.pkg.dev/reliable-proton-403504/hostspace/challenge:latest
+           docker-compose -f action.yml build -t us-east1-docker.pkg.dev/reliable-proton-403504/hostspace/challenge:latest .
+           docker-compose -f action.yml push us-east1-docker.pkg.dev/reliable-proton-403504/hostspace/challenge:latest
 
     
 
