--- a/.github/workflows/testing deployment to gc.yml
+++ b/.github/workflows/testing deployment to gc.yml
@@ -14,7 +14,7 @@ jobs:
       uses: actions/checkout@v2
         
     - name: Set up Google Cloud SDK
-      uses: GoogleCloudPlatform/github-actions/setup-gcloud@v0
+      uses: google-github-actions/setup-gcloud@v0
       with:
         service_account_key: ${{ secrets.SERVICE_ACCOUNT }}
         project_id:  ${{ secrets.GOOGLE_PROJECT }}
@@ -24,8 +24,8 @@ jobs:
       env: ${{ secrets.GOOGLE_PROJECT }}
       run: |
            gcloud auth configure-docker us-east1-docker.pkg.dev
-           docker-compose -f action.yml build -t us-east1-docker.pkg.dev/reliable-proton-403504/hostspace/challenge:latest .
-           docker-compose -f action.yml push us-east1-docker.pkg.dev/reliable-proton-403504/hostspace/challenge:latest
+           docker-compose -f action.yml build -t us-east1-docker.pkg.dev/$GOOGLE_PROJECT/challenge:latest .
+           docker-compose -f action.yml push us-east1-docker.pkg.dev/$GOOGLE_PROJECT/challenge:latest
 
     
 
