--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -50,7 +50,7 @@ jobs:
       run: |
            echo "${{ secrets.SSH_PRIVATE_KEY }}" > id_rsa
            sudo chmod 600 id_rsa
-           ssh -i id_rsa -o StrictHostKeyChecking=no -c aes256-cbc ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} '
+           ssh -i id_rsa -o StrictHostKeyChecking=no -c aes128-ctr ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} '
            docker run myapp1
            exit'
 
