--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -41,28 +41,31 @@ jobs:
         DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
         DOCKERHUB_PASSWORD: ${{ secrets.DOCKERHUB_PASSWORD }}
 
-    #- name: Copy SSH private key
-     # run: echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
-    #- name: Set key file permissions
-     # run: chmod 600 key.pem
+    - name: Copy SSH private key
+      run: echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
+    - name: Set key file permissions
+      run: chmod 600 key.pem
 
-    - name: Deploy Apps
+    #- name: Deploy Apps
+     # run: |
+      #     echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
+       #    sudo chmod 600 key.pem
+           #ssh -i key.pem -o StrictHostKeyChecking=no -c aes128-ctr ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} '
+           #docker run myapp1
+           #exit'
+
+
+    - name: Deploy to EC2
       run: |
-           echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
-           sudo chmod 600 key.pem
-           ssh -i key.pem -o StrictHostKeyChecking=no -c aes128-ctr ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} '
+         Copy the private key to the runner for SSH authentication
+         echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
+        chmod 600 key.pem
+
+    - name: Pull Docker image on EC2
+      run: ssh -i key.pem -o StrictHostKeyChecking=no -c aes128-ctr ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} '
            docker run myapp1
+             #docker pull ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest"
            exit'
-
-
-   # - name: Deploy to EC2
-    #  run: |
-     #   # Copy the private key to the runner for SSH authentication
-      #  echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
-       # chmod 600 key.pem
-
-    #- name: Pull Docker image on EC2
-     # run: ssh -i key.pem -o StrictHostKeyChecking=no ubuntu@3.91.84.79 "docker pull ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest"
 
     #- name: Run Docker container on EC2
      # run: ssh -i key.pem -o StrictHostKeyChecking=no ubuntu@3.91.84.79 "docker run -d -p 8080:80 ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest"eyChecking=no ubuntu@3.91.84.79 "docker run -d -p 8080:80 ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest"=no ubuntu@${{ secrets.EC2_INSTANCE_IP }} "docker run -d -p 8080:80 ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest"
