--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -51,7 +51,8 @@ jobs:
            echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
            chmod 600 key.pem
            ssh -i key.pem -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} '
-           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest"
+           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest
+           docker run -d -p 8080:80 ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest
            exit'
 
 
