--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -72,7 +72,10 @@ jobs:
          SSH_USER: ${{ secrets.SSH_USER }}
          EC2_INSTANCE_IP: ${{ secrets.EC2_INSTANCE_IP }}
 
-
+    - name: Add user to Docker group
+      run: sudo usermod -aG docker ${{ secrets.DOCKER_USER }}
+      if: runner.os == 'Linux'
+      
     - name: Deploy Apps
       run: |
            echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
