--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -72,6 +72,13 @@ jobs:
          SSH_USER: ${{ secrets.SSH_USER }}
          EC2_INSTANCE_IP: ${{ secrets.EC2_INSTANCE_IP }}
 
+    - name: Add user to Docker group on EC2
+      run: |
+          ssh -i key.pem -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} "sudo usermod -aG docker ${{ secrets.DOCKER_USER }}"
+      env:
+          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+
+
     - name: Add user to Docker group
       run: |
           sudo adduser ${{ secrets.DOCKER_USER }}
