--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -72,15 +72,15 @@ jobs:
          SSH_USER: ${{ secrets.SSH_USER }}
          EC2_INSTANCE_IP: ${{ secrets.EC2_INSTANCE_IP }}
 
-    - name: Add user to Docker group on EC2
-      run: |
-          ssh -i key.pem -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} '
-          sudo adduser ${{ secrets.DOCKER_USER }}
-          sudo usermod -aG docker ${{ secrets.DOCKER_USER }}
-          '
+    #- name: Add user to Docker group on EC2
+      #run: |
+      #  ssh -i key.pem -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} '
+      #    sudo adduser ${{ secrets.DOCKER_USER }}
+       #   sudo usermod -aG docker ${{ secrets.DOCKER_USER }}
+     #     '
           
-      env:
-          DOCKER_USER: ${{ secrets.DOCKER_USER }}
+      #env:
+          #DOCKER_USER: ${{ secrets.DOCKER_USER }}
 
 
  #   - name: Add user to Docker group
@@ -94,9 +94,9 @@ jobs:
            echo "${{ secrets.SSH_PRIVATE_KEY }}" > key.pem
            chmod 600 key.pem
            ssh -i key.pem -o StrictHostKeyChecking=no ${{ secrets.SSH_USER }}@${{ secrets.SSH_HOST }} '
-           docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
-           docker pull ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest
-           docker run -d -p 8080:80 ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest
+           sudo docker login -u ${{ secrets.DOCKERHUB_USERNAME }} -p ${{ secrets.DOCKERHUB_PASSWORD }}
+           sudo docker pull ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest
+           sudo docker run -d -p 8080:80 ${{ secrets.DOCKERHUB_USERNAME }}/myapp1:latest
            exit'
 
 
