--- a/ingress-service.yaml
+++ b/ingress-service.yaml
@@ -3,15 +3,19 @@ kind: Ingress
 metadata:
   name: ingress-service
   annotations:
+    nginx.ingress.kubernetes.io/default-backend: ingress-nginx-controller
+    kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
+    nginx.ingress.kubernetes.io/cors-allow-headers: "DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range"
 spec:
   ingressClassName: nginx
   rules:
     - http:
         paths:
-          - path: /app
-            pathType: Exact
+          - path: /
+            pathType: Prefix
             backend:
               service:
                 name: vue-service
