--- a/nginx.conf
+++ b/nginx.conf
@@ -1,20 +1,19 @@
-    server {
-        listen 80;
-        root app/dist/;
+server {
+    listen 80;
+    root /usr/share/nginx/html;
 
-        location / {
-            try_files $uri $uri/ /index.html;
-        }
-
-        location = /index.html {
-            expires -1;
-        }
-
-        location /proxy/ {
-            proxy_pass http://localhost:5000/;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        }
+    location / {
+        try_files $uri $uri/ /index.html;
     }
 
+    location = /index.html {
+        expires -1;
+    }
+
+    location /proxy/ {
+        proxy_pass http://localhost:5000/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    }
+}
