--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -76,13 +76,11 @@ jobs:
 
     
     
-      - name: Docker Auth
-        id: docker-auth
-        uses: 'docker/login-action@v1'
-        with:
-          username: 'oauth2accesstoken'
-          password: '${{ steps.auth.outputs.access_token }}'
-          registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
+      #  id: docker-auth
+       # uses: 'docker/login-action@v1'
+#          username: 'oauth2accesstoken'
+         # password: '${{ steps.auth.outputs.access_token }}'
+       ##   registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
 
       - name: Build and Push Container
         run: |-
