--- a/.github/workflows/testing deployment to gc.yml
+++ b/.github/workflows/testing deployment to gc.yml
@@ -23,10 +23,9 @@ jobs:
     - name: Build and Push Docker Image
       run: |
            gcloud auth configure-docker us-east1-docker.pkg.dev
-           docker-compose -f action.yml build -tag us-east1-docker.pkg.dev/$GOOGLE_PROJECT/${{ secrets.SERVICE_ACCOUNT }} .
-           docker-compose -f action.yml push us-east1-docker.pkg.dev/$GOOGLE_PROJECT/${{ secrets.SERVICE_ACCOUNT }}
+           docker-compose -f action.yml build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" .
+           docker-compose -f action.yml push -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
 
-    
 
        
    
