--- a/.github/workflows/testing deployment to gc.yml
+++ b/.github/workflows/testing deployment to gc.yml
@@ -5,6 +5,11 @@ on:
     branches:
       - main
 
+env:
+  PROJECT_ID: '${{ secrets.GOOGLE_PROJECT }}'
+  GAR_LOCATION: us-east1
+  SERVICE: '${{ secrets.SERVICE_ACCOUNT }}'
+  REGION: us-central1
 jobs:
   build_and_deploy:
     runs-on: ubuntu-latest
