--- a/.github/workflows/testing deployment to gc.yml
+++ b/.github/workflows/testing deployment to gc.yml
@@ -21,7 +21,7 @@ jobs:
     - name: Set up Google Cloud SDK
       uses: google-github-actions/setup-gcloud@v0
       with:
-        service_account_key: ${{ secrets.SERVICE_ACCOUNT }}
+        service_account_key: ${{ secrets.GCP_CREDENTIALS }}
         project_id:  ${{ secrets.GOOGLE_PROJECT }}
         export_default_credentials: true
 
