--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -51,6 +51,7 @@ on:
 env:
   PROJECT_ID: '${{ secrets.GOOGLE_PROJECT }}'
   GAR_LOCATION: us-east1
+  REPOSITORY: hostspace
   SERVICE: '${{ secrets.SERVICE_ACCOUNT }}'
   REGION: us-central1
 
@@ -73,19 +74,23 @@ jobs:
         uses: 'google-github-actions/auth@v0'
         with:
           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+          token_format: 'access_token'
 
     
     
-      #  id: docker-auth
-       # uses: 'docker/login-action@v1'
-#          username: 'oauth2accesstoken'
-         # password: '${{ steps.auth.outputs.access_token }}'
-       ##   registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
+
+      - name: Docker Auth
+        id: docker-auth
+        uses: 'docker/login-action@v1'
+        with:
+         registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
+         username: _json_key
+         password: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Build and Push Container
         run: |-
-          docker-compose -f action.yml build  -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}" ./
-          docker-compose -f action.yml push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}"
+          docker-compose -f action.yml build  -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}" ./
+          docker push  "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}"
 
       
 
@@ -95,7 +100,12 @@ jobs:
         with:
           service: ${{ env.SERVICE }}
           region: ${{ env.REGION }}
-          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.SERVICE }}:${{ github.sha }}
+          # NOTE: If using a pre-built image, update the image name here
+          image: ${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}
+          # NOTE: You can also set env variables here:
+          #  env_vars: |
+          #  NODE_ENV=production
+          #  TOKEN_EXPIRE=6400
 
       # If required, use the Cloud Run url output in later steps
       - name: Show Output
