--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -1,4 +1,4 @@
-# This workflow build and push a Docker container to Google Artifact Registry and deploy it on Cloud Run when a commit is pushed to the "main" branch
+# This workflow build and push a Docker container to Google Artifact Registry and deploy it on Cloud Run when a commit is pushed to the $default-branch branch
 #
 # Overview:
 #
@@ -23,6 +23,9 @@
 #      roles/run.admin
 #      roles/iam.serviceAccountUser     (to act as the Cloud Run runtime service account)
 #
+#    Cloud Storage
+#      roles/storage.admin   (if using Google Container Registry (gcr) instead)
+#
 #    Artifact Registry
 #      roles/artifactregistry.admin     (project or repository level)
 #
@@ -46,13 +49,14 @@ name: Build and Deploy to Cloud Run
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
 
 env:
-  PROJECT_ID: '${{ secrets.GOOGLE_PROJECT }}'
-  GAR_LOCATION: us-east1
+  PROJECT_ID: reliable-proton-403504
+  GAR_LOCATION: us-east1-docker.pkg.dev/reliable-proton-403504
   REPOSITORY: hostspace
-  SERVICE: '${{ secrets.SERVICE_ACCOUNT }}'
+  SERVICE: community-challenge
   REGION: us-central1
 
 jobs:
@@ -67,32 +71,48 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      
+      #- name: Google Auth
+       # id: auth
+       ## uses: 'google-github-actions/auth@v0'
+       # with:
+         # token_format: 'access_token'
+        #  workload_identity_provider: '${{ secrets.WIF_PROVIDER }}' # e.g. - projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
+          #service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}' # e.g. - my-service-account@my-project.iam.gserviceaccount.com
+
       
       - name: Google Auth
         id: auth
         uses: 'google-github-actions/auth@v0'
         with:
-          credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-          token_format: 'access_token'
+           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+           token_format: 'access_token'
 
-    
-    
+      # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
 
+      # Authenticate Docker to Google Cloud Artifact Registry
       - name: Docker Auth
         id: docker-auth
         uses: 'docker/login-action@v1'
         with:
-         registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
-         username: _json_key
-         password: ${{ secrets.GCP_CREDENTIALS }}
+          username: 'oauth2accesstoken'
+          password: '${{ steps.auth.outputs.access_token }}'
+          registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
+          
+      # NOTE: Alternative option - authentication via credentials json
+      # - name: Docker Auth
+      # id: docker-auth
+      # uses: 'docker/login-action@v1'
+      # with:
+      #   registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
+      #   username: _json_key
+      #   password: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Build and Push Container
         run: |-
-          docker-compose -f action.yml build  -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}" ./
-          docker push  "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}"
+          docker build -t "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}" ./
+          docker push "${{ env.GAR_LOCATION }}-docker.pkg.dev/${{ env.PROJECT_ID }}/${{ env.REPOSITORY }}/${{ env.SERVICE }}:${{ github.sha }}"
 
-      
+      # END - Docker auth and build
 
       - name: Deploy to Cloud Run
         id: deploy
