--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,7 +22,7 @@ jobs:
 #        name: Set up Docker Buildx
 #        uses: docker/setup-buildx-action@v3
       -
-        name: Build and push
+        name: Build and push docker image for the backend
         uses: docker/build-push-action@v5
         with:
           context: .
@@ -30,3 +30,11 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKERHUB_USERNAME }}/cloudflare:1.0
           target: api
+      -
+        name: Build and push docker image for the frontend
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/cloudflare:1.1
