--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -80,12 +80,12 @@ jobs:
           #service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}' # e.g. - my-service-account@my-project.iam.gserviceaccount.com
 
       
-      - name: Google Auth
-        id: auth
-        uses: 'google-github-actions/auth@v0'
+      - name: Set up Google Cloud SDK
+        uses: google-github-actions/setup-gcloud@v0
         with:
-           credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
-           token_format: 'access_token'
+          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+          project_id:  ${{ secrets.GOOGLE_PROJECT }}
+          export_default_credentials: true
 
       # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
 
