--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -90,22 +90,16 @@ jobs:
       # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
 
       # Authenticate Docker to Google Cloud Artifact Registry
+     
+          
+      
       - name: Docker Auth
         id: docker-auth
         uses: 'docker/login-action@v1'
         with:
-          username: 'oauth2accesstoken'
-          password: '${{ steps.auth.outputs.access_token }}'
-          registry: '${{ env.GAR_LOCATION }}-docker.pkg.dev'
-          
-      # NOTE: Alternative option - authentication via credentials json
-      # - name: Docker Auth
-      # id: docker-auth
-      # uses: 'docker/login-action@v1'
-      # with:
-      #   registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
-      #   username: _json_key
-      #   password: ${{ secrets.GCP_CREDENTIALS }}
+         registry: ${{ env.GAR_LOCATION }}-docker.pkg.dev
+         username: _json_key
+         password: ${{ secrets.GCP_CREDENTIALS }}
 
       - name: Build and Push Container
         run: |-
