--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -56,7 +56,7 @@ env:
   PROJECT_ID: reliable-proton-403504
   GAR_LOCATION: us-east1
   REPOSITORY: hostspace
-  SERVICE: myrun
+  SERVICE: community-challenge
   REGION: us-central1
 
 jobs:
