--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -71,21 +71,23 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
-      #- name: Google Auth
-       # id: auth
-       ## uses: 'google-github-actions/auth@v0'
-       # with:
-         # token_format: 'access_token'
-        #  workload_identity_provider: '${{ secrets.WIF_PROVIDER }}' # e.g. - projects/123456789/locations/global/workloadIdentityPools/my-pool/providers/my-provider
-          #service_account: '${{ secrets.WIF_SERVICE_ACCOUNT }}' # e.g. - my-service-account@my-project.iam.gserviceaccount.com
-
-      
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v0
+      - id: 'auth'
+        uses: 'google-github-actions/auth@v1'
         with:
-          service_account_key: ${{ secrets.GCP_CREDENTIALS }}
-          project_id:  ${{ secrets.GOOGLE_PROJECT }}
-          export_default_credentials: true
+         credentials_json: '${{ secrets.GCP_CREDENTIALS }}'
+
+      - name: 'Set up Cloud SDK'
+        uses: 'google-github-actions/setup-gcloud@v1'
+
+      - name: 'Use gcloud CLI'
+        run: 'gcloud info'
+      
+    #  - name: Set up Google Cloud SDK
+      #  uses: google-github-actions/setup-gcloud@v0
+       # with:
+        #  service_account_key: ${{ secrets.GCP_CREDENTIALS }}
+       #   project_id:  ${{ secrets.GOOGLE_PROJECT }}
+       #   export_default_credentials: true
 
       # BEGIN - Docker auth and build (NOTE: If you already have a container image, these Docker steps can be omitted)
 
