--- a/.github/workflows/google-cloudrun-docker.yml
+++ b/.github/workflows/google-cloudrun-docker.yml
@@ -8,7 +8,7 @@
 # 4. Publish it to Google Artifact Registry
 # 5. Deploy it to Cloud Run
 #
-# To configure this workflow:
+# To configure this workflow
 #
 # 1. Ensure the required Google Cloud APIs are enabled:
 #
