added the test in both pipelines

--- a/.github/workflows/deploy-be.yml
+++ b/.github/workflows/deploy-be.yml
@@ -25,8 +25,18 @@ jobs:
 
     test-backend:
       runs-on: ubuntu-latest
+      defaults:
+        run:
+          shell: bash
+          working-directory: ./backend
 
       steps:
+
+          - name: Copy Repo Code
+            uses: actions/checkout@v4
+            with: 
+              sparse-checkout: |
+                backend
         
           - uses: actions/checkout@v4
           - name: Set up Python
@@ -34,12 +44,17 @@ jobs:
             uses: actions/setup-python@v4
             with:
               # Semantic version range syntax or exact version of a Python version
-              python-version: '3.x'
+              python-version: '3.9'
               # Optional - x64 or x86 architecture, defaults to x64
               architecture: 'x64'
           # You can test your matrix by printing the current Python version
           - name: Display Python version
             run: python -c "import sys; print(sys.version)"
+
+          - name: Test the Python code
+            run: python -m unittest test_proxy.py
+
+          
 
     deploy-ecr-images:
         runs-on: ubuntu-latest
